refactor importing code

--- a/Notebooks/2_FAST-EM-montage.ipynb
+++ b/Notebooks/2_FAST-EM-montage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iCAT Montage\n",
+    "# FAST-EM Montage\n",
     "---\n",
     "\n",
     "#### Overview\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +79,13 @@
        "{'host': 'http://sonic.tnw.tudelft.nl',\n",
        " 'port': 8080,\n",
        " 'owner': 'akievits',\n",
-       " 'project': '20220529_MDCK_toy3D',\n",
+       " 'project': '20220610_UMCU',\n",
        " 'client_scripts': '/home/catmaid/render/render-ws-java-client/src/main/scripts',\n",
        " 'client_script': '/home/catmaid/render/render-ws-java-client/src/main/scripts/run_ws_client.sh',\n",
        " 'memGB': '2G'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
    "source": [
     "# `render-ws` parameters\n",
     "owner = 'akievits'\n",
-    "project = '20220529_MDCK_toy3D'\n",
+    "project = '20220610_UMCU'\n",
     "dir_project = Path(f\"/long_term_storage/{owner}/FAST-EM/{project}\")\n",
     "\n",
     "# Create a renderapi.connect.Render object\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,46 +178,46 @@
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">corrected</th>\n",
        "      <th>0</th>\n",
-       "      <td>cor-S001-000x000</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>cor-S000-000x000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>30402.0</td>\n",
-       "      <td>34862.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
        "      <td>[M=[[1.000000,0....</td>\n",
        "      <td>corrected</td>\n",
-       "      <td>align_002</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>cor-S001-000x001</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>cor-S000-000x001</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>30402.0</td>\n",
-       "      <td>34862.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
        "      <td>[M=[[1.000000,0....</td>\n",
        "      <td>corrected</td>\n",
-       "      <td>align_002</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>cor-S001-000x002</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>cor-S000-000x002</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>6400.0</td>\n",
        "      <td>6400.0</td>\n",
-       "      <td>30402.0</td>\n",
-       "      <td>34862.0</td>\n",
+       "      <td>29950.0</td>\n",
+       "      <td>35620.0</td>\n",
        "      <td>[0, 1, 2, 3, 4]</td>\n",
        "      <td>[M=[[1.000000,0....</td>\n",
        "      <td>corrected</td>\n",
-       "      <td>align_002</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -228,15 +228,15 @@
       "text/plain": [
        "                       tileId    z   width  height   minint   maxint  \\\n",
        "stack                                                                  \n",
-       "corrected 0  cor-S001-000x000  1.0  6400.0  6400.0  30402.0  34862.0   \n",
-       "          1  cor-S001-000x001  1.0  6400.0  6400.0  30402.0  34862.0   \n",
-       "          2  cor-S001-000x002  1.0  6400.0  6400.0  30402.0  34862.0   \n",
+       "corrected 0  cor-S000-000x000  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "          1  cor-S000-000x001  0.0  6400.0  6400.0  29950.0  35620.0   \n",
+       "          2  cor-S000-000x002  0.0  6400.0  6400.0  29950.0  35620.0   \n",
        "\n",
-       "                imagePyramid               tforms      stack  sectionId  \\\n",
-       "stack                                                                     \n",
-       "corrected 0  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  align_002   \n",
-       "          1  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  align_002   \n",
-       "          2  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  align_002   \n",
+       "                imagePyramid               tforms      stack       sectionId  \\\n",
+       "stack                                                                          \n",
+       "corrected 0  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  EPON_80nm_s001   \n",
+       "          1  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  EPON_80nm_s001   \n",
+       "          2  [0, 1, 2, 3, 4]  [M=[[1.000000,0....  corrected  EPON_80nm_s001   \n",
        "\n",
        "             imageRow  imageCol  \n",
        "stack                            \n",
@@ -245,7 +245,7 @@
        "          2         0         2  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,13 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daf95fac29c84321a292f5133b76a0f1",
+       "model_id": "f23793ac3fe44421aaede54a0540748e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,80 +369,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"7\" valign=\"top\">corrected</th>\n",
-       "      <th>85</th>\n",
-       "      <td>corrected</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>align_005</td>\n",
-       "      <td>cor-S004-001x003</td>\n",
-       "      <td>TOP</td>\n",
-       "      <td>align_005</td>\n",
-       "      <td>cor-S004-002x003</td>\n",
-       "      <td>BOTTOM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>corrected</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-001x003</td>\n",
-       "      <td>TOP</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-002x003</td>\n",
-       "      <td>BOTTOM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>corrected</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>align_006</td>\n",
-       "      <td>cor-S005-000x000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-004x006</td>\n",
        "      <td>LEFT</td>\n",
-       "      <td>align_006</td>\n",
-       "      <td>cor-S005-000x001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-004x007</td>\n",
        "      <td>RIGHT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
+       "      <th>258</th>\n",
        "      <td>corrected</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>align_006</td>\n",
-       "      <td>cor-S005-002x001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-001x008</td>\n",
+       "      <td>LEFT</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-001x009</td>\n",
+       "      <td>RIGHT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377</th>\n",
+       "      <td>corrected</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-007x005</td>\n",
        "      <td>TOP</td>\n",
-       "      <td>align_006</td>\n",
-       "      <td>cor-S005-003x001</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-008x005</td>\n",
        "      <td>BOTTOM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>376</th>\n",
        "      <td>corrected</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>align_005</td>\n",
-       "      <td>cor-S004-002x001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-007x004</td>\n",
        "      <td>LEFT</td>\n",
-       "      <td>align_005</td>\n",
-       "      <td>cor-S004-002x002</td>\n",
+       "      <td>EPON_80nm_s002</td>\n",
+       "      <td>cor-S001-007x005</td>\n",
        "      <td>RIGHT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>117</th>\n",
        "      <td>corrected</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-000x002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-005x006</td>\n",
+       "      <td>TOP</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-006x006</td>\n",
+       "      <td>BOTTOM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>corrected</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-010x003</td>\n",
        "      <td>LEFT</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-000x003</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-010x004</td>\n",
        "      <td>RIGHT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>166</th>\n",
        "      <td>corrected</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-000x000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-007x009</td>\n",
        "      <td>LEFT</td>\n",
-       "      <td>align_002</td>\n",
-       "      <td>cor-S001-000x001</td>\n",
+       "      <td>EPON_80nm_s001</td>\n",
+       "      <td>cor-S000-007x010</td>\n",
        "      <td>RIGHT</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -450,28 +450,38 @@
        "</div>"
       ],
       "text/plain": [
-       "                   stack    z  p.groupId              p.id p.relativePosition  \\\n",
-       "stack                                                                           \n",
-       "corrected 85   corrected  4.0  align_005  cor-S004-001x003                TOP   \n",
-       "          13   corrected  1.0  align_002  cor-S001-001x003                TOP   \n",
-       "          97   corrected  5.0  align_006  cor-S005-000x000               LEFT   \n",
-       "          112  corrected  5.0  align_006  cor-S005-002x001                TOP   \n",
-       "          89   corrected  4.0  align_005  cor-S004-002x001               LEFT   \n",
-       "          5    corrected  1.0  align_002  cor-S001-000x002               LEFT   \n",
-       "          1    corrected  1.0  align_002  cor-S001-000x000               LEFT   \n",
+       "                   stack    z       p.groupId              p.id  \\\n",
+       "stack                                                             \n",
+       "corrected 97   corrected  0.0  EPON_80nm_s001  cor-S000-004x006   \n",
+       "          258  corrected  1.0  EPON_80nm_s002  cor-S001-001x008   \n",
+       "          377  corrected  1.0  EPON_80nm_s002  cor-S001-007x005   \n",
+       "          376  corrected  1.0  EPON_80nm_s002  cor-S001-007x004   \n",
+       "          117  corrected  0.0  EPON_80nm_s001  cor-S000-005x006   \n",
+       "          213  corrected  0.0  EPON_80nm_s001  cor-S000-010x003   \n",
+       "          166  corrected  0.0  EPON_80nm_s001  cor-S000-007x009   \n",
        "\n",
-       "               q.groupId              q.id q.relativePosition  \n",
-       "stack                                                          \n",
-       "corrected 85   align_005  cor-S004-002x003             BOTTOM  \n",
-       "          13   align_002  cor-S001-002x003             BOTTOM  \n",
-       "          97   align_006  cor-S005-000x001              RIGHT  \n",
-       "          112  align_006  cor-S005-003x001             BOTTOM  \n",
-       "          89   align_005  cor-S004-002x002              RIGHT  \n",
-       "          5    align_002  cor-S001-000x003              RIGHT  \n",
-       "          1    align_002  cor-S001-000x001              RIGHT  "
+       "              p.relativePosition       q.groupId              q.id  \\\n",
+       "stack                                                                \n",
+       "corrected 97                LEFT  EPON_80nm_s001  cor-S000-004x007   \n",
+       "          258               LEFT  EPON_80nm_s002  cor-S001-001x009   \n",
+       "          377                TOP  EPON_80nm_s002  cor-S001-008x005   \n",
+       "          376               LEFT  EPON_80nm_s002  cor-S001-007x005   \n",
+       "          117                TOP  EPON_80nm_s001  cor-S000-006x006   \n",
+       "          213               LEFT  EPON_80nm_s001  cor-S000-010x004   \n",
+       "          166               LEFT  EPON_80nm_s001  cor-S000-007x010   \n",
+       "\n",
+       "              q.relativePosition  \n",
+       "stack                             \n",
+       "corrected 97               RIGHT  \n",
+       "          258              RIGHT  \n",
+       "          377             BOTTOM  \n",
+       "          376              RIGHT  \n",
+       "          117             BOTTOM  \n",
+       "          213              RIGHT  \n",
+       "          166              RIGHT  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +558,7 @@
        " '1000']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +575,7 @@
     "                                         matchRod=0.92)             # closest/next closest ratio\n",
     "# `SIFT` parameters\n",
     "feature_params = FeatureExtractionParameters(SIFTfdSize=8,          # feature descriptor size\n",
-    "                                             SIFTmaxScale=0.18,     # (width/height *) maximum image size\n",
+    "                                             SIFTmaxScale=0.20,     # (width/height *) maximum image size\n",
     "                                             SIFTminScale=0.05,     # (width/height *) minimum image size\n",
     "                                             SIFTsteps=7)           # steps per scale octave\n",
     "# Combined `SIFT` & `RANSAC` parameters\n",
@@ -590,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,27 +609,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbb9841ebd77421aa81c7f1d7568bf22",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "7222735214b244cfa20e4604b3d694b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,68 +629,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "17a1a419584a4c5990b839f15c42abbc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
+       "  0%|          | 0/19 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1997,7 +1937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
