Add code to avoid duplication of mipmaps

--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -231,6 +231,192 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4da6de4a-f9a7-4248-87de-7ccbf09fe519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_section = dir_sections[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "12fa3d8f-c746-4ed3-a20e-385913ca8dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stack_name='raw'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "22acbae4-794f-4166-9b6a-678b06615f1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "990e6199-6cc0-4222-82d5-93d8fe93e9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir_output = dir_project / stack_name / dir_section.name\n",
+    "output_dirs = list(os.listdir(dir_output))\n",
+    "files = list(dir_section.glob('[0-9]*_[0-9]*_0.tiff'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "409b0d30-8396-4372-812c-dc51f3b51a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_files = []\n",
+    "for output_dir in output_dirs:\n",
+    "    processed_file = dir_section / f'{output_dir}_0.tiff' \n",
+    "    processed_files.append(processed_file)\n",
+    "files_to_process = [file for file in files if file not in processed_files]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "87b4bf47-4ced-471c-935b-fd6463891bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b6e9beac-d978-4b71-8d97-7a5fd5b211a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(processed_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "aa43c6ec-28fa-441b-b54d-84be34cb2a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mprocessed_files\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfiles\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "processed_files - files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "af2bea51-eba3-4e8f-8a19-6a228009023e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'010_010_0.tiff'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if os.path.isdir(dir_output / last_dir):\n",
+    "    print('exists')\n",
+    "else: \n",
+    "    print('does not exist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4320fcd9-6db8-48b4-9365-b1db83ce7660",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/long_term_storage/akievits/FAST-EM/20220610_UMCU/raw/EPON_80nm_s001')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "72835ca9-3042-492d-9f18-951444917b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/long_term_storage/asm_storage/asm_service/2022-06-10/20220610_UMCU/EPON_80nm_s001/010_010_0.tiff')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_file"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "31e0a396-2a0e-45cc-a0db-da77ac6c5a74",
    "metadata": {},
