Modifications to import module

--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "e6669eda-114d-47eb-b88b-a0c4bf29a4ba",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "id": "4bdfa42f-6c50-4af4-b677-771f1422c339",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "{0: 'EPON_80nm_s001', 1: 'EPON_80nm_s002'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "id": "ae0103ad-cc0b-4e33-8d66-e611a48c2edb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'generate_mipmaps_from_sections' from 'fastemworkflow.importdata' (/home/akievits/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [83]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastemworkflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimportdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_mipmaps\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastemworkflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimportdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m generate_mipmaps_from_sections\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'generate_mipmaps_from_sections' from 'fastemworkflow.importdata' (/home/akievits/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py)"
+     ]
+    }
+   ],
    "source": [
     "from fastemworkflow.importdata import create_mipmaps\n",
     "from fastemworkflow.importdata import generate_mipmaps_from_sections"
