Add function argument to import module

--- a/Notebooks/1_FAST-EM_import.ipynb
+++ b/Notebooks/1_FAST-EM_import.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "e6669eda-114d-47eb-b88b-a0c4bf29a4ba",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "4bdfa42f-6c50-4af4-b677-771f1422c339",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "{0: 'EPON_80nm_s001', 1: 'EPON_80nm_s002'}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,22 +199,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "id": "ae0103ad-cc0b-4e33-8d66-e611a48c2edb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'generate_mipmaps_from_sections' from 'fastemworkflow.importdata' (/home/akievits/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [83]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastemworkflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimportdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_mipmaps\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfastemworkflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimportdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m generate_mipmaps_from_sections\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'generate_mipmaps_from_sections' from 'fastemworkflow.importdata' (/home/akievits/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fastemworkflow.importdata import create_mipmaps\n",
     "from fastemworkflow.importdata import generate_mipmaps_from_sections"
@@ -237,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5579c0ff432e429fb84b932871f83429",
+       "model_id": "72a370058c444efda7d68274d5a5b0e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,37 +237,22 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "213b277e000a451586d6efdcfaef816e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08e68c9155644fe6950dcaa2f7615982",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/121 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'dir_project' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Generate mipmaps from 'raw' stack for every section\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgenerate_mipmaps_from_sections\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir_sections\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m                               \u001b[49m\u001b[43mstack_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniconda3/envs/fastem/lib/python3.9/site-packages/fastemworkflow/importdata.py:52\u001b[0m, in \u001b[0;36mgenerate_mipmaps_from_sections\u001b[0;34m(dir_sections, stack_name)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;66;03m# Loop through section directories\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m z, dir_section \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28menumerate\u001b[39m(dir_sections),\n\u001b[1;32m     48\u001b[0m                        total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(dir_sections)):\n\u001b[1;32m     49\u001b[0m     \n\u001b[1;32m     50\u001b[0m     \u001b[38;5;66;03m# Check if MipMaps have already been generated\u001b[39;00m\n\u001b[1;32m     51\u001b[0m     \u001b[38;5;66;03m# List output dirs and all files for processing\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m     dir_output \u001b[38;5;241m=\u001b[39m \u001b[43mdir_project\u001b[49m \u001b[38;5;241m/\u001b[39m stack_name \u001b[38;5;241m/\u001b[39m dir_section\u001b[38;5;241m.\u001b[39mname\n\u001b[1;32m     53\u001b[0m     output_dirs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(os\u001b[38;5;241m.\u001b[39mlistdir(dir_output))\n\u001b[1;32m     54\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(dir_section\u001b[38;5;241m.\u001b[39mglob(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[0-9]*_[0-9]*_0.tiff\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;66;03m# List all files\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dir_project' is not defined"
+     ]
     }
    ],
    "source": [
     "# Generate mipmaps from 'raw' stack for every section\n",
-    "generate_mipmaps_from_sections(dir_sections, \n",
+    "generate_mipmaps_from_sections(dir_project,\n",
+    "                               dir_sections, \n",
     "                               stack_name='raw')"
    ]
   },
@@ -342,7 +315,8 @@
    ],
    "source": [
     "# Generate mipmaps from 'corrected' stack for every section\n",
-    "generate_mipmaps_from_sections(dir_sections, \n",
+    "generate_mipmaps_from_sections(dir_project,\n",
+    "                               dir_sections, \n",
     "                               stack_name='corrected')  "
    ]
   },
